--- a/mateWeb/public/css/estilos.css
+++ b/mateWeb/public/css/estilos.css
@@ -1,3 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
 body{
+    font-family: 'Roboto', sans-serif;    
+}
+.back_home{
+    background-image: url('../img/back_home.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+}
+
+.bg-matelab{
     background-color: #159e4a;
+}
+
+.navbar{
+    box-shadow: 2px 2px 5px #040691;
+}
+
+.header_ppal {
+    position: relative;
+    background: url("../img/back_home.jpg");
+    background-size: cover;
+    min-height: 100vh;    
+}
+
+.transparencia {
+    position: absolute;
+    background: rgba(21,158,74,0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.logo{
+    opacity: 0.85;
+}
+
+/************************/
+/* BARRA REDES SOCIALES*/
+/************************/
+
+.social {
+    position: fixed;
+    left: 0;
+    top: 200px;
+    z-index: 2000;
+}
+
+.social ul {
+    list-style: none;
+}
+
+.social ul li a {
+    display: inline-block;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-decoration: none;
+    transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    -webkit-transition: all 500ms ease;
+}
+
+.social ul li a:hover {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background: #000;
 }
