--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -1,4 +1,8 @@
 /* Body style setup */
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0px;
   margin: 0px;
@@ -17,6 +21,13 @@ header * {
 
 header .logo {
   float: left;
+  height: inherit;
+  margin-left: 2em;
+  border: 1px solid red;
+}
+
+header .logo-text {
+  margin: 5px;
 }
 
 header ul {
