--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -1,3 +1,6 @@
+/* Importing fonts*/
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 /* Body style setup */
 * {
   box-sizing: border-box;
@@ -7,6 +10,7 @@ body {
   padding: 0px;
   margin: 0px;
   background: #f6f6f6;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Header and Navbar setup */
@@ -23,11 +27,14 @@ header .logo {
   float: left;
   height: inherit;
   margin-left: 2em;
-  border: 1px solid red;
 }
 
 header .logo-text {
-  margin: 5px;
+  margin: 9px;
+}
+
+header .logo-text span {
+  color: #7fffd4;
 }
 
 header ul {
