--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -48,6 +48,17 @@ header ul li {
   float: left;
 }
 
+header ul li a {
+  display: block;
+  padding: 21px;
+  font-size: 1.1em;
+  text-decoration: none;
+}
+
+header ul li a:hover {
+  background: #006669;
+}
+
 header .menu-toggle {
   display: none;
 }
