--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -97,4 +97,8 @@ header ul li ul li a.logout {
 
 /* Media queries - Responsive front-end */
 
-@media only screen and(max-width: 750px);
+@media only screen and(max-width: 750px) {
+  header ul {
+    width: 100%;
+  }
+}
