--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -100,5 +100,6 @@ header ul li ul li a.logout {
 @media only screen and(max-width: 750px) {
   header ul {
     width: 100%;
+    background: #159e4a;
   }
 }
