--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -98,9 +98,15 @@ header ul li ul li a.logout {
 /* Media queries - Responsive front-end */
 
 @media only screen and (max-width: 750px) {
+  header {
+    position: relative;
+  }
+
   header ul {
     width: 100%;
     background: #159e4a;
+    max-height: 0px;
+    overflow: hidden;
   }
 
   header ul li {
@@ -127,5 +133,9 @@ header ul li ul li a.logout {
 
   header .menu-toggle {
     display: block;
+    position: relative;
+    right: 20px;
+    top: 10px;
+    font-size: 1.5em;
   }
 }
