--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -133,7 +133,7 @@ header ul li ul li a.logout {
 
   header .menu-toggle {
     display: block;
-    position: relative;
+    position: absolute;
     right: 20px;
     top: 10px;
     font-size: 1.5em;
