--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -97,6 +97,12 @@ header ul li ul li a.logout {
 
 /* Post slider styles */
 
+.post-slider {
+}
+
+.post-slider .post-wrapper {
+}
+
 /* Media queries - Responsive front-end */
 
 @media only screen and (max-width: 750px) {
