--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -101,6 +101,16 @@ header ul li ul li a.logout {
 }
 
 .post-slider .post-wrapper {
+  width: 84%;
+  height: 350px;
+  margin: 0px auto;
+}
+
+.post-slider .post-wrapper .post {
+  width: 300px;
+  height: 350px;
+  display: inline-block;
+  background: red;
 }
 
 /* Media queries - Responsive front-end */
