--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -102,6 +102,7 @@ header ul li ul li a.logout {
 
 .post-slider .slider-title {
   text-align: center;
+  margin: 30px auto;
 }
 
 .post-slider .post-wrapper {
