--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -13,6 +13,16 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", serif;
+  color: #444;
+}
+
 /* Header and Navbar setup */
 header {
   background: #159e4a;
