--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -108,11 +108,15 @@ header ul li ul li a.logout {
 /* Post slider styles */
 
 .post-slider {
+  position: relative;
 }
 
 .post-slider .slider-title {
   text-align: center;
   margin: 30px auto;
+}
+
+.post-slider .next {
 }
 
 .post-slider .post-wrapper {
