--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -151,6 +151,7 @@ header ul li ul li a.logout {
 
 .post-slider .post-wrapper .post .slider-image {
   width: 100%;
+  height: 200px;
 }
 
 /* Media queries - Responsive front-end */
