--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -136,14 +136,15 @@ header ul li ul li a.logout {
 
 .post-slider .post-wrapper {
   width: 84%;
-  height: 450px;
+  height: 350px;
   margin: 0px auto;
   overflow: hidden;
+  padding: 10px 0px 10px 0px;
 }
 
 .post-slider .post-wrapper .post {
   width: 300px;
-  height: 450px;
+  height: 330px;
   margin: 0px 10px;
   display: inline-block;
   background: red;
@@ -151,7 +152,7 @@ header ul li ul li a.logout {
 
 .post-slider .post-wrapper .post .slider-image {
   width: 100%;
-  height: 300px;
+  height: 200px;
 }
 
 /* Media queries - Responsive front-end */
