--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -136,7 +136,7 @@ header ul li ul li a.logout {
 
 .post-slider .post-wrapper {
   width: 84%;
-  height: 350px;
+  height: 450px;
   margin: 0px auto;
   overflow: hidden;
   padding: 10px 0px 10px 0px;
@@ -144,15 +144,15 @@ header ul li ul li a.logout {
 
 .post-slider .post-wrapper .post {
   width: 300px;
-  height: 330px;
+  height: 430px;
   margin: 0px 10px;
   display: inline-block;
-  background: red;
+  background: white;
 }
 
 .post-slider .post-wrapper .post .slider-image {
   width: 100%;
-  height: 200px;
+  height: 300px;
 }
 
 /* Media queries - Responsive front-end */
