--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -149,6 +149,7 @@ header ul li ul li a.logout {
   display: inline-block;
   background: white;
   border-radius: 5px;
+  box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
 }
 
 .post-slider .post-wrapper .post .slider-image {
