--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -152,6 +152,10 @@ header ul li ul li a.logout {
   box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
 }
 
+.post-slider .post-wrapper .post .post-info {
+  height: 130px;
+}
+
 .post-slider .post-wrapper .post .slider-image {
   width: 100%;
   height: 300px;
