--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -181,6 +181,14 @@ header ul li ul li a.logout {
 
 .content {
   width: 90%;
+  margin: 30px auto 30px;
+  border: 1px solid red;
+}
+
+.content .main-content {
+  width: 70%;
+  float: left;
+  border: 1 solid blue;
 }
 
 /* Media queries - Responsive front-end */
