Main content section

--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -29,6 +29,12 @@ a {
   color: inherit;
 }
 
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
 /* Header and Navbar setup */
 header {
   background: #159e4a;
