--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -202,6 +202,7 @@ header ul li ul li a.logout {
   height: 270px;
   margin: 10px auto;
   border-radius: 5px;
+  background: white;
 }
 
 .content .main-content .recent-post-title {
