Main content section

--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -37,7 +37,7 @@ a {
 
 .btn {
   padding: 0.5rem 1rem;
-  background: #006669;
+  background: #159e4a;
   color: white;
   border: 1px solid transparent;
   border-radius: 0.25rem;
