--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -43,6 +43,11 @@ a {
   border-radius: 0.25rem;
 }
 
+.btn:hover {
+  color: white !important;
+  background: #159e4a;
+}
+
 /* Header and Navbar setup */
 header {
   background: #159e4a;
