--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -216,6 +216,7 @@ header ul li ul li a.logout {
   margin: 10px auto auto 20px;
   border-radius: 5px;
   background: white;
+  position: relative;
 }
 
 .content .main-content .post .post-image {
