--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -201,13 +201,11 @@ header ul li ul li a.logout {
 .content {
   width: 90%;
   margin: 30px auto 30px;
-  border: 1px solid red;
 }
 
 .content .main-content {
   width: 70%;
   float: left;
-  border: 1px solid blue;
 }
 
 .content .main-content .post {
@@ -239,6 +237,8 @@ header ul li ul li a.logout {
   width: 40%;
   height: 100%;
   float: left;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .content .main-content .post .post-preview {
@@ -254,7 +254,6 @@ header ul li ul li a.logout {
 .content .sidebar {
   width: 30%;
   float: left;
-  border: 1px dashed green;
   height: 700px;
 }
 
