--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -52,6 +52,11 @@ a {
   padding: 0.7rem 1rem;
   display: block;
   width: 100%;
+  border-radius: 5px;
+  outline: none;
+  color: #444;
+  line-height: 1.5rem;
+  font-family: "Roboto", serif;
 }
 
 /* Header and Navbar setup */
