--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -53,9 +53,11 @@ a {
   display: block;
   width: 100%;
   border-radius: 5px;
+  border: 1px solid #e0e0e0;
   outline: none;
   color: #444;
   line-height: 1.5rem;
+  font-size: 1.2em;
   font-family: "Roboto", serif;
 }
 
