--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -291,7 +291,7 @@ header ul li ul li a.logout {
 
 .content .sidebar .section.topics ul li a {
   display: block;
-  padding: 15px;
+  padding: 15px 0px 15px;
 }
 
 /* Media queries - Responsive front-end */
