--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -296,6 +296,10 @@ header ul li ul li a.logout {
   border-bottom: 1px solid #e0e0e0;
 }
 
+.content .sidebar .section.topics ul li a:hover {
+  padding-left: 20px;
+}
+
 /* Media queries - Responsive front-end */
 
 @media only screen and (max-width: 750px) {
