--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -284,7 +284,7 @@ header ul li ul li a.logout {
 }
 
 .content .sidebar .section .section-tile {
-  margin: 10px 0px;
+  margin: 10px 0px 10px 0px;
 }
 
 .content .sidebar .section.topics ul {
