--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -314,6 +314,11 @@ header ul li ul li a.logout {
   height: 400px;
 }
 
+.footer .footer-bottom {
+  background: #343a40;
+  color: #686868;
+}
+
 /* Media queries - Responsive front-end */
 
 @media only screen and (max-width: 750px) {
