--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -312,11 +312,15 @@ header ul li ul li a.logout {
   background: #303036;
   color: #d3d3d3;
   height: 400px;
+  position: relative;
 }
 
 .footer .footer-bottom {
   background: #343a40;
   color: #686868;
+  height: 50px;
+  text-align: center;
+  position: absolute;
 }
 
 /* Media queries - Responsive front-end */
