--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -319,6 +319,7 @@ header ul li ul li a.logout {
   background: #343a40;
   color: #686868;
   height: 50px;
+  width: 100%;
   text-align: center;
   position: absolute;
   bottom: 0px;
