--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -326,6 +326,7 @@ header ul li ul li a.logout {
 
 .footer .footer-content .footer-section {
   flex: 1;
+  padding: 25px;
 }
 
 .footer .footer-bottom {
