--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -329,6 +329,11 @@ header ul li ul li a.logout {
   padding: 25px;
 }
 
+.footer .footer-content h1,
+.footer .footer-content h2 {
+  color: white;
+}
+
 .footer .footer-bottom {
   background: #343a40;
   color: #686868;
