--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -346,6 +346,9 @@ header ul li ul li a.logout {
 
 .footer .footer-content .about .socials a {
   width: 45px;
+  height: 41px;
+  padding-top: 5px;
+  margin-right: 5px;
 }
 
 .footer .footer-bottom {
