--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -349,6 +349,7 @@ header ul li ul li a.logout {
   height: 41px;
   padding-top: 5px;
   margin-right: 5px;
+  text-align: center;
 }
 
 .footer .footer-bottom {
