--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -350,6 +350,7 @@ header ul li ul li a.logout {
   padding-top: 5px;
   margin-right: 5px;
   text-align: center;
+  display: inline-block;
 }
 
 .footer .footer-bottom {
