--- a/mateBlog/css/style.css
+++ b/mateBlog/css/style.css
@@ -351,6 +351,7 @@ header ul li ul li a.logout {
   margin-right: 5px;
   text-align: center;
   display: inline-block;
+  font-size: 1.3em;
 }
 
 .footer .footer-bottom {
