--- a/mateBlog/css/post.css
+++ b/mateBlog/css/post.css
@@ -7,6 +7,11 @@
   border-radius: 5px;
 }
 
+.content .main-content.single .post-title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 .content .sidebar.single {
   padding: 0px 10px;
 }
