--- a/mateBlog/components/footer.html
+++ b/mateBlog/components/footer.html
@@ -24,11 +24,11 @@
         </div>
       </div>
       <div class="footer-section links">
-        <h2>Quick Links</h2>
+        <h2>Links Rapidos</h2>
         <br>
         <ul>
-          <li><a href="#">Test Quick Link</a></li>
-          <li><a href="#">Test Quick Link</a></li>
+          <li><a href="#">Link vacio</a></li>
+          <li><a href="#">Link vacio</a></li>
           <li><a href="#">Test Quick Link</a></li>
           <li><a href="#">Test Quick Link</a></li>
           <li><a href="#">Test Quick Link</a></li>
@@ -36,14 +36,14 @@
         </ul>
       </div>
       <div class="footer-section contact-form">
-        <h2>Contact us</h2>
+        <h2>Contactanos</h2>
         <br>
         <form action="index.html" method="post">
           <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
           <textarea rows="4" name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
           <button type="submit" class="btn btn-big contact-btn">
             <i class="fas fa-envelope"></i>
-            Send
+            Enviar
           </button>
         </form>
       </div>
