--- a/mateBlog/components/footer.html
+++ b/mateBlog/components/footer.html
@@ -29,10 +29,10 @@
         <ul>
           <li><a href="#">Link vacio</a></li>
           <li><a href="#">Link vacio</a></li>
-          <li><a href="#">Test Quick Link</a></li>
-          <li><a href="#">Test Quick Link</a></li>
-          <li><a href="#">Test Quick Link</a></li>
-          <li><a href="#">Test Quick Link</a></li>
+          <li><a href="#">Link vacio</a></li>
+          <li><a href="#">Link vacio</a></li>
+          <li><a href="#">Link vacio</a></li>
+          <li><a href="#">Link vacio</a></li>
         </ul>
       </div>
       <div class="footer-section contact-form">
