--- a/mateBlog/components/footer.html
+++ b/mateBlog/components/footer.html
@@ -39,8 +39,8 @@
         <h2>Contactanos</h2>
         <br>
         <form action="index.html" method="post">
-          <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
-          <textarea rows="4" name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
+          <input type="email" name="email" class="text-input contact-input" placeholder="Tu dirección de e-mail...">
+          <textarea rows="4" name="message" class="text-input contact-input" placeholder="Dejanos tu mensaje =) ..."></textarea>
           <button type="submit" class="btn btn-big contact-btn">
             <i class="fas fa-envelope"></i>
             Enviar
